--- a/a.css
+++ b/a.css
@@ -61,3 +61,28 @@ header  {
     margin-left: 200px;
     margin-right: 200px;
 }
+.111 {
+    text-align: center;
+    
+}
+.mean {
+    text-align: center;
+}
+.555{
+    text-align: center;
+}
+.center{
+    text-align: center;
+}
+h3{
+    text-align: center;
+}
+h1 {
+    text-align: center;
+}
+p{
+    text-align: center;
+}
+h2{
+    text-align: center;
+}
